--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 			href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,300&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="stylesheet" href="styles.css" />
+		<script src="script.js" defer></script>
 	</head>
 	<body>
 		<form action="" onsubmit="searchPokemon(event)">
